# SpellWheel

./: .gitignore  Cargo.toml  README.md
hudhook_fork/hudhook/src/hooks/: dx12.rs
src/: await_seamless.rs  camera.rs  debugging.rs  display_item.rs  display_spell.rs  font.rs  gamepad.rs  hwindow.rs  icons.rs  io.rs  items.rs  keyboard.rs  lib.rs  mouse.rs  paths.rs  pointers.rs  rendering.rs  settings.rs  spells.rs  util.rs  xinput_hook.rs
src/dynamic_icons/: generic_reader.rs  keys.rs  mod.rs  modded_reader.rs  read_success.rs  vanilla_reader.rs
src/glyphs/: builder.rs  fmg.rs  font_manager.rs  generic_reader.rs  mod.rs  modded_reader.rs  reader.rs  vanilla_reader.rs
src/icons/: atlas.rs  atlas_dump.rs  await_graphics.rs  generic_loader.rs  icon_manager.rs  json_loader.rs  mod.rs  modded_loader.rs  vanilla_loader.rs
