[package]
name = "spellwheel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring = "0.13.0"
fromsoftware-shared = "0.13.0"

imgui = "0.12.0"
hudhook = "0.8.3"
image = "0.25.10"
rayon = "1.11.0"

windows-sys = "0.61.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
pmod = { git = "https://github.com/Dasaav-dsv/pmod" }
lazy_static = "1.5.0"
panic-message = "0.3.0"
cached = "0.59.0"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["serde_derive"] }