[package]
name = "spellwheel"
version = "1.4.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
eldenring = "0.14.0"
fromsoftware-shared = "0.14.0"
retour = { version = "0.3.1", features = ["static-detour"] }
imgui = "0.12.0"
hudhook = "0.8.3"
image = "0.25.10"
rayon = "1.11.0"
windows-sys = "0.61.2"
windows = { version = "0.61.2", features = ["Win32", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_XboxController", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
pmod = { git = "https://github.com/Dasaav-dsv/pmod" }
lazy_static = "1.5.0"
panic-message = "0.3.0"
cached = "0.59.0"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
fstools_dvdbnd = { git = "https://github.com/soulsmods/fstools-rs" }
fstools_formats = { git = "https://github.com/soulsmods/fstools-rs" }
image_dds = "0.7.2"
roxmltree = "0.21.1"
regex = "1.12.4"